--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,4 +29,5 @@ jobs:
     - run: |
         touch .env
         echo "${{ secrets.HOSTA_ENV_FILE }}" > .env
+    - run: pm2 restart BackendAPI  
        
