--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "version": "0.0.0",
   "private": true,
+  "type": "commonjs",
   "scripts": {
     "start": "node ./bin/www"
   },
@@ -13,20 +14,21 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "expo-server-sdk": "^4.0.0",
-    "express": "~4.16.1",
+    "express": "^4.21.2",
     "express-rate-limit": "^8.2.0",
     "express-session": "^1.18.1",
+    "firebase-admin": "^13.6.0",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^1.9.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
-    "morgan": "~1.9.1",
+    "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
-    "nodemailer": "^6.9.15",
+    "nodemailer": "^7.0.10",
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
